--- a/ServerAPI/pom.xml
+++ b/ServerAPI/pom.xml
@@ -189,15 +189,15 @@
             Ideas Dependencies
         -->
         <!--<dependency>-->
-            <!--<groupId>com.coreapipi</groupId>-->
-            <!--<artifactId>utilities</artifactId>-->
-            <!--<version>${utilities.version}</version>-->
+        <!--<groupId>com.coreapipi</groupId>-->
+        <!--<artifactId>utilities</artifactId>-->
+        <!--<version>${utilities.version}</version>-->
         <!--</dependency>-->
 
         <!--<dependency>-->
-            <!--<groupId>com.coreapipi</groupId>-->
-            <!--<artifactId>persistence</artifactId>-->
-            <!--<version>${persistence.version}</version>-->
+        <!--<groupId>com.coreapipi</groupId>-->
+        <!--<artifactId>persistence</artifactId>-->
+        <!--<version>${persistence.version}</version>-->
         <!--</dependency>-->
 
 
@@ -263,7 +263,6 @@
         </dependency>
 
 
-
         <!--
             MYSQL Driver
         -->
@@ -296,6 +295,12 @@
             <artifactId>json-object-mapper</artifactId>
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-core</artifactId>
+            <version>1.0.1.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -306,8 +311,8 @@
                 <version>1.0-beta-1</version>
                 <configuration>
                     <server>coreapi-ci</server>
-                    <url>http://coreapi.net:8080/manager</url>
-                    <port>8080</port>
+                    <url>http://coreapi.net/manager</url>
+                    <port>80</port>
                     <!--SNAPSHOTS/${coreapi-net.deploy-path}-->
                     <path>/</path>
                     <warFile>${project.basedir}/target/${project.build.finalName}.war</warFile>
