--- a/Entities/pom.xml
+++ b/Entities/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.goodtech</groupId>
     <artifactId>entities</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Tribes - Entities</name>
     <url>http://maven.apache.org</url>
@@ -22,5 +22,18 @@
             <version>1.6.2</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
