--- a/ServerAPI/pom.xml
+++ b/ServerAPI/pom.xml
@@ -311,8 +311,8 @@
                 <version>1.0-beta-1</version>
                 <configuration>
                     <server>coreapi-ci</server>
-                    <url>http://coreapi.net/manager</url>
-                    <port>80</port>
+                    <url>http://coreapi.net:8080/manager</url>
+                    <port>8080</port>
                     <!--SNAPSHOTS/${coreapi-net.deploy-path}-->
                     <path>/SNAPSHOTS/${coreapi-net.deploy-path}</path>
                     <warFile>${project.basedir}/target/${project.build.finalName}.war</warFile>
