--- a/ClientAPI/java/pom.xml
+++ b/ClientAPI/java/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.ideas</groupId>
     <artifactId>api-client</artifactId>
     <packaging>jar</packaging>
-    <version>1.07</version>
+    <version>1.0.3-SNAPSHOT</version>
     <name>api-client</name>
     <url>http://maven.apache.org</url>
 
