--- a/ServerAPI/pom.xml
+++ b/ServerAPI/pom.xml
@@ -7,7 +7,7 @@
     <groupId>net.coreapi</groupId>
     <packaging>war</packaging>
     <artifactId>ServerAPI</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.3-SNAPSHOT</version>
 
 
     <!-- Shared version number properties -->
@@ -15,7 +15,7 @@
         <org.springframework.version>3.0.5.RELEASE</org.springframework.version>
 
         <persistence.version>1.0.0-SNAPSHOT</persistence.version>
-        <coreapi-net.deploy-path>${user.name}/${project.version}</coreapi-net.deploy-path>
+        <coreapi-net.deploy-path>stage</coreapi-net.deploy-path>
     </properties>
 
 
