--- a/ServerAPI/pom.xml
+++ b/ServerAPI/pom.xml
@@ -24,7 +24,13 @@
         <dependency>
             <groupId>org.goodtech</groupId>
             <artifactId>entities</artifactId>
-            <version>1.0.6-SNAPSHOT</version>
+            <version>1.0.7-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+        	<groupId>org.mongodb</groupId>
+        	<artifactId>mongo-java-driver</artifactId>
+        	<version>1.3</version>
         </dependency>
 
         <!--
