--- a/ServerAPI/pom.xml
+++ b/ServerAPI/pom.xml
@@ -4,6 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <!--<parent>-->
+        <!--<groupId>net.coreapi</groupId>-->
+      <!--<artifactId>Tribes</artifactId>-->
+      <!--<version>1.0.0-SNAPSHOT</version>-->
+    <!--</parent>-->
+    <!--<modelVersion>4.0.0</modelVersion>-->
+    <!--<artifactId>my-module</artifactId>-->
+
     <groupId>net.coreapi</groupId>
     <packaging>war</packaging>
     <artifactId>ServerAPI</artifactId>
