--- a/ServerAPI/pom.xml
+++ b/ServerAPI/pom.xml
@@ -42,6 +42,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.scottbyrns</groupId>
+            <artifactId>Mongo-Utilities</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
         	<groupId>org.mongodb</groupId>
         	<artifactId>mongo-java-driver</artifactId>
         	<version>1.3</version>
