--- a/ClientAPI/java/pom.xml
+++ b/ClientAPI/java/pom.xml
@@ -46,6 +46,18 @@
             <version>4.8.2</version>
         </dependency>
 
+        <dependency>
+               <groupId>net.smartam.leeloo</groupId>
+               <artifactId>oauth2-client</artifactId>
+               <version>0.1</version>
+        </dependency>
+
+        <dependency>
+                <groupId>net.smartam.leeloo</groupId>
+                <artifactId>oauth2-common</artifactId>
+                <version>0.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
